Fixed folder clean settings bug. Allow folder clean to NOT remove empty folders.

--- a/TorboFile/Properties/CleanFolderSettings.settings
+++ b/TorboFile/Properties/CleanFolderSettings.settings
@@ -32,5 +32,8 @@
     <Setting Name="deleteEmptyFiles" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="deleteEmptyFolders" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
