--- a/TorboFile/App.config
+++ b/TorboFile/App.config
@@ -128,6 +128,9 @@
             <setting name="deleteEmptyFiles" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="deleteEmptyFolders" serializeAs="String">
+                <value>True</value>
+            </setting>
         </TorboFile.Properties.FolderCleanSettings>
         <TorboFile.Properties.Sorting>
             <setting name="lastDirectory" serializeAs="String">
